@@ -3,6 +3,7 @@ version 2.0.15+cvs (cvs):
 	  spelling is set to EN (Blondak)
 	* Fix Bug #2715972 Remove an extra comma at the end of the GtkSpellError
 	  enum definition.
+	* Fix Bug #2526949 Sort languages list submenu.
 
 version 2.0.15 (2008-12-01):
 	* Additional translations (see po/ChangeLog).
